--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>포트폴리오</title>
+    <title>소이짱의 포트폴리오</title>
     <link
       rel="preconnect"
       href="https://fonts.gstatic.com"
@@ -117,7 +117,7 @@
                       data-aos="fade-left"
                       data-aos-delay="50"
                     >
-                      계획을 좋아하는 J개발자 이상민입니다!
+                      저는 강소이 입니다!
                     </h1>
                     <p
                       class="lead fw-normal mt-3"
@@ -162,8 +162,8 @@
                       data-aos="fade-up"
                       data-aos-delay="100"
                     >
-                      phone : 010-9293-3217 <br>
-                      email : sangmin5848@naver.com
+                      phone :  <br>
+                      email : 
                     </p>
                     </div>
                   </div>
@@ -177,8 +177,8 @@
           <div class="container-narrow">
             <div class="row">
               <div class="col-md-6">
-                <h2 class="h4 my-2">계획을 사랑하는 J개발자 이상민입니다.</h2>
-                <p>저는 백엔드 개발자입니다.</p>
+                <h2 class="h4 my-2">수정사항</h2>
+                <p>수정사항</p>
                 <div class="row mt-3">
                   <div class="col-sm-2">
                     <div class="pb-1">Age:</div>
