--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>소이짱의 포트폴리오</title>
+    <title>강소이의 포트폴리오</title>
     <link
       rel="preconnect"
       href="https://fonts.gstatic.com"
@@ -162,8 +162,8 @@
                       data-aos="fade-up"
                       data-aos-delay="100"
                     >
-                      phone :  <br>
-                      email : 
+                      phone :  010-9639-2060<br>
+                      email : rainbowfox1@naver.com
                     </p>
                     </div>
                   </div>
