--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                           <li class="nav-item">
                             <a
                               class="nav-link"
-                              href="https://github.com/ddongbu"
+                              href="https://github.com/soi02"
                               title="GitHub"
                               ><i class="fab fa-github"></i
                               ><span class="menu-title sr-only">GitHub</span></a
@@ -145,7 +145,7 @@
                           <li class="nav-item">
                             <a
                               class="nav-link"
-                              href="https://www.instagram.com/tkdxls"
+                              href="https://www.instagram.com/soi.g"
                               title="Instagram"
                               ><i class="fab fa-instagram"></i
                               ><span class="menu-title sr-only"
@@ -184,25 +184,25 @@
                     <div class="pb-1">Age:</div>
                   </div>
                   <div class="col-sm-10">
-                    <div class="pb-1 fw-bolder">25</div>
+                    <div class="pb-1 fw-bolder">23</div>
                   </div>
                   <div class="col-sm-2">
                     <div class="pb-1">Email:</div>
                   </div>
                   <div class="col-sm-10">
-                    <div class="pb-1 fw-bolder">sangmin5848@naver.com</div>
+                    <div class="pb-1 fw-bolder">rainbowfox1@naver.com</div>
                   </div>
                   <div class="col-sm-2">
                     <div class="pb-1">Phone:</div>
                   </div>
                   <div class="col-sm-10">
-                    <div class="pb-1 fw-bolder">010-9293-3217</div>
+                    <div class="pb-1 fw-bolder">010-9639-2060</div>
                   </div>
                   <div class="col-sm-2">
                     <div class="pb-1">Address:</div>
                   </div>
                   <div class="col-sm-10">
-                    <div class="pb-1 fw-bolder">Seoul, RoK</div>
+                    <div class="pb-1 fw-bolder">Incheon, RoK</div>
                   </div>
                   <div class="col-sm-2">
                     <div class="pb-1">Staus:</div>
@@ -315,7 +315,7 @@
                 <div class="col-md-5">
                   <div class="py-1">
                     <div class="d-flex text-small fw-bolder">
-                      <span class="me-auto">SpringBoot</span><span>90%</span>
+                      <span class="me-auto">SpringBoot</span><span>80%</span>
                     </div>
                     <div class="progress my-1">
                       <div
@@ -324,7 +324,7 @@
                         data-aos="zoom-in-right"
                         data-aos-delay="100"
                         data-aos-anchor=".skills-section"
-                        style="width: 90%"
+                        style="width: 80%"
                         aria-valuenow="90"
                         aria-valuemin="0"
                         aria-valuemax="100"
@@ -389,7 +389,7 @@
                 <div class="col-md-5 offset-md-2">
                   <div class="py-1">
                     <div class="d-flex text-small fw-bolder">
-                      <span class="me-auto">React</span><span>65%</span>
+                      <span class="me-auto">React</span><span>60%</span>
                     </div>
                     <div class="progress my-1">
                       <div
@@ -398,7 +398,7 @@
                         data-aos="zoom-in-right"
                         data-aos-delay="600"
                         data-aos-anchor=".skills-section"
-                        style="width: 65%"
+                        style="width: 60%"
                         aria-valuenow="60"
                         aria-valuemin="0"
                         aria-valuemax="100"
@@ -443,7 +443,7 @@
               <div class="mx-auto mb-3" style="max-width: 600px; text-align: left;">
                 <h2>
                   <i class="fas fa-circle fa-xs" ></i>
-                  컴퓨터정보과(20)
+                  컴퓨터정보과(21학번번)
               </h2>
               <p style="border-bottom: 1px dotted #ccc;"></p>
               <p>Inha Technical College. <br>
@@ -484,7 +484,7 @@
         <footer class="pt-4 pb-4 text-center bg-light">
           <div class="container">
             <div class="my-3">
-              <div class="h4">Sangmin Lee</div>
+              <div class="h4">Soyi Kang</div>
               <p>Web Developer</p>
               <div class="social-nav">
                 <nav role="navigation">
@@ -492,7 +492,7 @@
                     <li class="nav-item">
                       <a
                         class="nav-link"
-                        href="https://github.com/ddongbu"
+                        href="https://github.com/soi02"
                         title="GitHub"
                         ><i class="fab fa-github"></i
                         ><span class="menu-title sr-only">Github</span></a
