--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                   <img
                     class="img-fluid"
                     style="max-width:60%"
-                    src="images/sangmin2.jpg"
+                    src="images/soi2.jpg"
                     alt="hello"
                   />
                 </div>
@@ -219,7 +219,7 @@
               >
                 <img
                   class="avatar img-fluid mt-2"
-                  src="images/sangmin.jpg"
+                  src="images/soi.jpg"
                   width="400"
                   height="400"
                   alt="Walter Patterson"
