--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
           <div class="container-narrow">
             <div class="row">
               <div class="col-md-6">
-                <h2 class="h4 my-2">수정사항</h2>
-                <p>수정사항</p>
+                <h2 class="h4 my-2">자신을 소개하는 한줄</h2>
+                <p>강소이</p>
                 <div class="row mt-3">
                   <div class="col-sm-2">
                     <div class="pb-1">Age:</div>
