--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           <div class="container-narrow">
             <div class="row">
               <div class="col-md-6">
-                <h2 class="h4 my-2">자신을 소개하는 한줄</h2>
+                <h2 class="h4 my-2">끊임없이 배우며 더 나은 내일을 만드는 사람</h2>
                 <p>강소이</p>
                 <div class="row mt-3">
                   <div class="col-sm-2">
@@ -448,7 +448,7 @@
               <p style="border-bottom: 1px dotted #ccc;"></p>
               <p>Inha Technical College. <br>
                   컴퓨터의 기초와 관심과 흥미를 찾기위한 다양한 분야를 수강 <br>
-                  2021 - 2023
+                  2021 - 2024
               </p>
               <br>
               <h2>
