--- a/index.html
+++ b/index.html
@@ -244,10 +244,6 @@
                   (관계형)데이터베이스의 사용법을 알고 있습니다.
                   데이터추출을 위한 MySQl사용법을 알고 있습니다.</p>
 
-                  <p>React
-                  개인 프로젝트를 진행하여 홈페이지의 틀을 짜고 직접 개발 했던 경험이 있습니다.
-                  사이드 프로젝트와 단체 프로젝트를 진행 했던 경험이 있습니다.<br>
-
                   JavaScript
                   (Thymeleaf)의 사용법을 알고 있습니다.
                   (ES6)에 대해서 공부하고 사용법을 알고 있습니다.</p>
@@ -444,30 +440,26 @@
                 <h2>
                   <i class="fas fa-circle fa-xs" ></i>
                   컴퓨터정보과(21학번번)
-              </h2>
-              <p style="border-bottom: 1px dotted #ccc;"></p>
-              <p>Inha Technical College. <br>
+                </h2>
+                <p style="border-bottom: 1px dotted #ccc;"></p>
+                <p>Inha Technical College. <br>
                   컴퓨터의 기초와 관심과 흥미를 찾기위한 다양한 분야를 수강 <br>
                   2021 - 2024
-              </p>
-              <br>
+                </p>
+                <br>
               <h2>
                   <i class="fas fa-circle fa-xs"></i>
-                  ASAC K-Digital-Training 웹 풀스택 개발자 3기 - SK Planet
+                  AI Exop KOREA 2023
               </h2>
               <p style="border-bottom: 1px dotted #ccc;"></p>
-              <p>2023-07 ~ 2024-01 진행</p>      
-                <p>: 웹 풀스택 개발자 교육 프로그램에 합격하여 8주간 웹 프론트엔드, 백엔드 프로젝트와 기업 연계 프로젝트를 진행하고 있습니다. </p>
-                  <h3>Docker multi-container 구동 : </h3>
-                  <p> * SpringBoot 와 MySql을 사용하여 multi-container 를 구동했습니다. </p>
-                  <a href="https://github.com/ddongbu/ASAC-Multi-Container">https://github.com/ddongbu/ASAC-Multi-Container</a>
-                  <br>
-                  <h3>Nginx 로 Reverse Proxy 설정 및 OpenSSL 적용하여 HTTPS 설정 :</h3>
-                  <a href="https://github.com/ddongbu/ASAC-nginx">https://github.com/ddongbu/ASAC-nginx</a>
-                  <h3>Next.js,TypeScript,React-hook에 대해서 학습 및 실습</h3>
-                  <a href="https://github.com/ddongbu/ASAC-ReactClone">https://github.com/ddongbu/ASAC-ReactClone</a>
-                  <h3>매주 알고리즘 스터디 , CS 스터디 등 CS지식의 습득과 매주 과제로 코드 리뷰 진행</h3>
-                  <a href="https://velog.io/@ddongbu/series/%EC%BD%94%EB%94%A9%ED%85%8C%EC%8A%A4%ED%8A%B8">https://velog.io/@ddongbu/series/%EC%BD%94%EB%94%A9%ED%85%8C%EC%8A%A4%ED%8A%B8</a>
+              <p>2023.05.10</p>      
+                <p>: AI 기술과 최신 동향을 보여주고, 다양한 기업들과 전문가들이 모여 기술과 비즈니스에 관련된 교류와 네트워킹을 할 수 있는 기회를 제공했다. </p>
+                <h2>
+                  <i class="fas fa-circle fa-xs"></i>
+                  14회 OVAL FOURM 사업계획서
+              </h2>
+              <p style="border-bottom: 1px dotted #ccc;"></p>
+              <p>2024.01.12</p>     
                 
                   <br><br>
                   <h2>
