--- a/index.html
+++ b/index.html
@@ -431,8 +431,8 @@
               <p class="mx-auto mb-3" style="max-width: 600px">
 
             </div>
-            <div class="text-center mb-5">
-              <h2 class="marker marker-center">교육</h2>
+            <div class="text-center mb-5" id="experience">
+              <h2 class="marker marker-center">경험</h2>
               <br>
               <br>
               <br>
