--- a/index.html
+++ b/index.html
@@ -431,7 +431,9 @@
               <p class="mx-auto mb-3" style="max-width: 600px">
 
             </div>
-            <div class="text-center mb-5" id="experience">
+        <div class="section px-2 px-lg-4 pt-5" id="experience">
+          <div class="container">
+            <div class="text-center mb-5">
               <h2 class="marker marker-center">경험</h2>
               <br>
               <br>
