--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <a class="nav-link" href="#about">나의소개</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#services">서비스</a>
+                <a class="nav-link" href="#services">특기기</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#skills">기술스택</a>
@@ -432,7 +432,7 @@
 
             </div>
         <div class="section px-2 px-lg-4 pt-5" id="experience">
-          <div class="container">
+          <div class="container-narrow">
             <div class="text-center mb-5">
               <h2 class="marker marker-center">경험</h2>
               <br>
@@ -449,6 +449,15 @@
                   2021 - 2024
                 </p>
                 <br>
+                <h3>
+                  <i class="fas fa-circle fa-xs"></i>
+                  SKT 유니티 메타버스 교육
+              </h3>
+              <p style="border-bottom: 1px dotted #ccc;"></p>
+              <p>2022 11월 7일 ~ 11월 28일 </p>      
+                <p>: Unity Programing 기반으로 메타버스(metaverse) 콘텐츠 제작 교육을 실습 중심으로 진행한다. 유니티를 활용한 메타버스 콘텐츠 
+                  제작에서는 유니티 개발환경을 구축하고, 메타버스 공간 만들기, 스테이지 꾸미기, 케릭터 아바타 이동 및 애니메이션 적용하기 등의 실습을 진행한다 </p>
+               <br>
               <h3>
                   <i class="fas fa-circle fa-xs"></i>
                   AI Exop KOREA 2023
@@ -457,6 +466,7 @@
               <p>2023.05.10</p>      
                 <p>: AI 기술과 최신 동향을 보여주고, 다양한 기업들과 전문가들이 모여 기술과 비즈니스에 관련된 교류와 네트워킹을 할 수 있는 기회를 제공했다. </p>
                <br>
+               
                 <h3>
                   <i class="fas fa-circle fa-xs"></i>
                   14회 OVAL FOURM 사업계획서
