--- a/index.html
+++ b/index.html
@@ -473,7 +473,8 @@
               </h3>
               <p style="border-bottom: 1px dotted #ccc;"></p>
               <p>2024.01.12</p>     
-                <p>: </p>
+                <p>: 오발 코리아와 국제지도자연합이 주최한 행사로, 경영과 창업에 관심 있는 청년들에게 
+                  경영 전반에 대한 이해와 인사이트를 제공하고, 다양한 의견을 나눌 기회를 제공합니다.</p>
                   <br>
                   <h3>
                   <i class="fas fa-circle fa-xs"></i>
