--- a/index.html
+++ b/index.html
@@ -455,8 +455,8 @@
               </h3>
               <p style="border-bottom: 1px dotted #ccc;"></p>
               <p>2022 11월 7일 ~ 11월 28일 </p>      
-                <p>: Unity Programing 기반으로 메타버스(metaverse) 콘텐츠 제작 교육을 실습 중심으로 진행한다. 유니티를 활용한 메타버스 콘텐츠 
-                  제작에서는 유니티 개발환경을 구축하고, 메타버스 공간 만들기, 스테이지 꾸미기, 케릭터 아바타 이동 및 애니메이션 적용하기 등의 실습을 진행한다 </p>
+                <p>: Unity Programing 기반으로 메타버스(metaverse) 콘텐츠 제작 교육을 실습 중심으로 진행했습니다. 유니티를 활용한 메타버스 콘텐츠 
+                  제작에서는 유니티 개발환경을 구축하고, 메타버스 공간 만들기, 스테이지 꾸미기, 케릭터 아바타 이동 및 애니메이션 적용하기 등의 실습을 진행 </p>
                <br>
               <h3>
                   <i class="fas fa-circle fa-xs"></i>
@@ -464,7 +464,7 @@
               </h3>
               <p style="border-bottom: 1px dotted #ccc;"></p>
               <p>2023.05.10</p>      
-                <p>: AI 기술과 최신 동향을 보여주고, 다양한 기업들과 전문가들이 모여 기술과 비즈니스에 관련된 교류와 네트워킹을 할 수 있는 기회를 제공했다. </p>
+                <p>: AI 기술과 최신 동향을 보여주고, 다양한 기업들과 전문가들이 모여 기술과 비즈니스에 관련된 교류와 네트워킹을 할 수 있는 기회를 제공 </p>
                <br>
                
                 <h3>
@@ -474,7 +474,7 @@
               <p style="border-bottom: 1px dotted #ccc;"></p>
               <p>2024.01.12</p>     
                 <p>: 오발 코리아와 국제지도자연합이 주최한 행사로, 경영과 창업에 관심 있는 청년들에게 
-                  경영 전반에 대한 이해와 인사이트를 제공하고, 다양한 의견을 나눌 기회를 제공합니다.</p>
+                  경영 전반에 대한 이해와 인사이트를 제공하고, 다양한 의견을 나눌 기회를 제공</p>
                   <br>
                   <h3>
                   <i class="fas fa-circle fa-xs"></i>
