--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <a class="nav-link" href="#experience">경험</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#contact">연락처</a>
+                <a class="nav-link" href="tel:+821096392060">연락처</a>
               </li>
             </ul>
           </div>
