--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <a class="nav-link" href="#about">나의소개</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#services">특기기</a>
+                <a class="nav-link" href="#services">특기</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#skills">기술스택</a>
