--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
         <div class="section px-2 px-lg-4 pt-5" id="experience">
           <div class="container-narrow">
             <div class="text-center mb-5">
-              <h2 class="marker marker-center">경험</h2>
+              <h2 class="marker marker-center">경험</h2>
               <br>
               <br>
               <br>
