--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <a class="nav-link" href="#skills">기술스택</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#portfolio">포트폴리오</a>
+                <a class="nav-link" href="#portfolio">프로젝트트</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#experience">경험</a>
@@ -237,7 +237,7 @@
               <p class="mx-auto mb-3" style="max-width: 600px">
                 <p>Java의
                   Spring, Springboot를 사용하여 프로젝트를 개발했던 경험이 있습니다.
-                  Jpa 사용 경험과 SpringSecurity으로 회원 처리 개발했던 경 험있습니다.
+                  Jpa 사용 경험과 SpringSecurity으로 회원 처리 개발했던 경험있습니다.
                   Oauth2.0으로 소셜 회원가입 + DB 관리 개발했던 경험이 있습니다.</p>
 
                   <p>MySql
@@ -445,8 +445,8 @@
                 </h3>
                 <p style="border-bottom: 1px dotted #ccc;"></p>
                 <p>Inha Technical College. <br>
+                  2021 - 2024<br>
                   컴퓨터의 기초와 관심과 흥미를 찾기위한 다양한 분야를 수강 <br>
-                  2021 - 2024
                 </p>
                 <br>
                 <h3>
