--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <a class="nav-link" href="#skills">기술스택</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#portfolio">프로젝트트</a>
+                <a class="nav-link" href="#portfolio">프로젝트</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#experience">경험</a>
@@ -427,7 +427,7 @@
         <div class="section px-2 px-lg-4 pt-5" id="portfolio">
           <div class="container">
             <div class="text-center mb-5">
-              <h2 class="marker marker-center">포트폴리오</h2>
+              <h2 class="marker marker-center">프로젝트</h2>
               <p class="mx-auto mb-3" style="max-width: 600px">
 
             </div>
@@ -441,7 +441,7 @@
               <div class="mx-auto mb-3" style="max-width: 600px; text-align: left;">
                 <h3>
                   <i class="fas fa-circle fa-xs" ></i>
-                  컴퓨터정보과(21학번번)
+                  컴퓨터정보과(21학번)
                 </h3>
                 <p style="border-bottom: 1px dotted #ccc;"></p>
                 <p>Inha Technical College. <br>
