--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           <div class="container-narrow">
             <div class="row">
               <div class="col-md-6">
-                <h2 class="h4 my-2">끊임없이 배우며 더 나은 내일을 만드는 사람</h2>
+                <h2 class="h4 my-2">끊임없이 배우며 더 나은 내일을 만드는 人</h2>
                 <p>강소이</p>
                 <div class="row mt-3">
                   <div class="col-sm-2">
