--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <a class="nav-link" href="#services">특기</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#skills">기술스택</a>
+                <a class="nav-link" href="#skills">기술 스택</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#portfolio">프로젝트</a>
@@ -177,7 +177,7 @@
           <div class="container-narrow">
             <div class="row">
               <div class="col-md-6">
-                <h2 class="h4 my-2">끊임없이 배우며 더 나은 내일을 만드는 人</h2>
+                <h2 class="h4 my-2">끊임없이 배우며 더 나은 내일을 만드는 사람</h2>
                 <p>강소이</p>
                 <div class="row mt-3">
                   <div class="col-sm-2">
@@ -429,7 +429,16 @@
             <div class="text-center mb-5">
               <h2 class="marker marker-center">프로젝트</h2>
               <p class="mx-auto mb-3" style="max-width: 600px">
-
+              <div>
+                <span>
+                  <img  src="images/soi.jpg" />
+                  <img  src="images/soi.jpg" />
+                </span>
+                <span>
+                  <img  src="images/soi.jpg" />
+                  <img  src="images/soi.jpg" />
+                </span>
+              </div>
             </div>
         <div class="section px-2 px-lg-4 pt-5" id="experience">
           <div class="container-narrow">
