--- a/index.html
+++ b/index.html
@@ -429,7 +429,24 @@
             <div class="text-center mb-5">
               <h2 class="marker marker-center">프로젝트</h2>
               <p class="mx-auto mb-3" style="max-width: 600px">
-              
+            </div>
+             <div class="row g-3">
+              <div class="col-md-4">
+                <a href="">
+                  <img class="w-100" src="images/librarymange.png" alt="프로젝트 이미지" />
+                </a>
+              </div>
+               <div class="col-md-4">
+                <a href="">
+                  <img class="w-100" src="images/roadrush.png" alt="프로젝트 이미지" />
+                </a>
+              </div>
+               <div class="col-md-4">
+                <a href="">
+                  <img class="w-100" src="images/java.png" alt="프로젝트 이미지" />
+                </a>
+              </div>
+              <!-- 다른 프로젝트 항목 추가 가능 -->
             </div>
         <div class="section px-2 px-lg-4 pt-5" id="experience">
           <div class="container-narrow">
