--- a/index.html
+++ b/index.html
@@ -430,21 +430,50 @@
               <h2 class="marker marker-center">프로젝트</h2>
               <p class="mx-auto mb-3" style="max-width: 600px">
             </div>
-             <div class="row g-3">
-              <div class="col-md-4">
-                <a href="">
-                  <img class="w-100" src="images/librarymange.png" alt="프로젝트 이미지" />
-                </a>
+             <div class="row row-cols-2 g-3"> <!-- 두 개씩 배치하기 위해 row-cols-2 사용 -->
+            <!-- 프로젝트 1 -->
+              <div class="col">
+                <div class="project">
+                  <a href="#">
+                    <img class="w-100" src="images/librarymange.png" alt="프로젝트 이미지 1" />
+                    <div class="overlay">
+                      <p>도서 관리 시스템 프로젝트입니다.</p>
+                    </div>
+                  </a>
+                </div>
               </div>
-               <div class="col-md-4">
-                <a href="">
-                  <img class="w-100" src="images/roadrush.png" alt="프로젝트 이미지" />
-                </a>
+            <!-- 프로젝트 2 -->
+              <div class="col">
+                <div class="project">
+                  <a href="#">
+                    <img class="w-100" src="images/roadrush.png" alt="프로젝트 이미지 2" />
+                    <div class="overlay">
+                      <p>도서 관리 시스템 프로젝트입니다.</p>
+                    </div>
+                  </a>
+                </div>
               </div>
-               <div class="col-md-4">
-                <a href="">
-                  <img class="w-100" src="images/java.png" alt="프로젝트 이미지" />
-                </a>
+            <!-- 프로젝트 3 -->
+              <div class="col">
+                <div class="project">
+                  <a href="#">
+                    <img class="w-100" src="images/java.png" alt="프로젝트 이미지 3" />
+                    <div class="overlay">
+                      <p>도서 관리 시스템 프로젝트입니다.</p>
+                    </div>
+                  </a>
+                </div>
+              </div>
+            <!-- 프로젝트 2 -->
+              <div class="col">
+                <div class="project">
+                  <a href="#">
+                    <img class="w-100" src="images/" alt="프로젝트 이미지 4" />
+                    <div class="overlay">
+                      <p>도서 관리 시스템 프로젝트입니다.</p>
+                    </div>
+                  </a>
+                </div>
               </div>
               <!-- 다른 프로젝트 항목 추가 가능 -->
             </div>
