--- a/index.html
+++ b/index.html
@@ -430,50 +430,46 @@
               <h2 class="marker marker-center">프로젝트</h2>
               <p class="mx-auto mb-3" style="max-width: 600px">
             </div>
-             <div class="row row-cols-2 g-3"> <!-- 두 개씩 배치하기 위해 row-cols-2 사용 -->
+            <div class="row g-3"> <!-- 두 개씩 배치하기 위해 row-cols-2 사용 -->
             <!-- 프로젝트 1 -->
-              <div class="col">
-                <div class="project">
-                  <a href="#">
-                    <img class="w-100" src="images/librarymange.png" alt="프로젝트 이미지 1" />
-                    <div class="overlay">
-                      <p>도서 관리 시스템 프로젝트입니다.</p>
-                    </div>
-                  </a>
-                </div>
+              <div class="col-md-6 portfolio-item hover-effect">
+                <figure>
+                    <img class="w-100" src="images/librarymange.png" alt="프로젝트 이미지" />
+                    <figcaption>
+                        <h4>도서 관리 시스템</h4>
+                        <p>도서를 효율적으로 관리할 수 있는 시스템</p>
+                    </figcaption>
+                </figure>
               </div>
             <!-- 프로젝트 2 -->
-              <div class="col">
-                <div class="project">
-                  <a href="#">
-                    <img class="w-100" src="images/roadrush.png" alt="프로젝트 이미지 2" />
-                    <div class="overlay">
-                      <p>도서 관리 시스템 프로젝트입니다.</p>
-                    </div>
-                  </a>
-                </div>
+              <div class="col-md-6 portfolio-item hover-effect">
+                <figure>
+                    <img class="w-100" src="images/roadrush.png" alt="프로젝트 이미지" />
+                    <figcaption>
+                        <h4>로드 러쉬 게임</h4>
+                        <p>속도와 반응을 요구하는 스릴 넘치는 레이싱 게임</p>
+                    </figcaption>
+                </figure>
               </div>
             <!-- 프로젝트 3 -->
-              <div class="col">
-                <div class="project">
-                  <a href="#">
-                    <img class="w-100" src="images/java.png" alt="프로젝트 이미지 3" />
-                    <div class="overlay">
-                      <p>도서 관리 시스템 프로젝트입니다.</p>
-                    </div>
-                  </a>
-                </div>
+              <div class="col-md-6 portfolio-item hover-effect">
+                <figure>
+                    <img class="w-100" src="images/java.png" alt="프로젝트 이미지" />
+                    <figcaption>
+                        <h4>자바 어플리케이션</h4>
+                        <p>효율적인 데이터 처리 시스템</p>
+                    </figcaption>
+                </figure>
               </div>
-            <!-- 프로젝트 2 -->
-              <div class="col">
-                <div class="project">
-                  <a href="#">
-                    <img class="w-100" src="images/" alt="프로젝트 이미지 4" />
-                    <div class="overlay">
-                      <p>도서 관리 시스템 프로젝트입니다.</p>
-                    </div>
-                  </a>
-                </div>
+            <!-- 프로젝트 4 -->
+             <div class="col-md-6 portfolio-item hover-effect">
+                <figure>
+                    <img class="w-100" src="images/" alt="프로젝트 이미지" />
+                    <figcaption>
+                        <h4>또 다른 프로젝트</h4>
+                        <p>최신 기술을 적용한 창의적인 솔루션</p>
+                    </figcaption>
+                </figure>
               </div>
               <!-- 다른 프로젝트 항목 추가 가능 -->
             </div>
