--- a/index.html
+++ b/index.html
@@ -437,7 +437,9 @@
                     <img class="w-100" src="images/librarymange.png" alt="프로젝트 이미지" />
                     <figcaption>
                         <h4>도서 관리 시스템</h4>
-                        <p>도서를 효율적으로 관리할 수 있는 시스템</p>
+                        <p>이 프로젝트는 JSP를 활용한 도서 관리 시스템으로, 사용자들이 책 정보를 쉽게 확인하고 관리할 수 있도록 도와주는 웹 서비스입니다.
+                          이 시스템을 통해 도서 대여 현황과 반납 기한을 효율적으로 관리할 수 있으며, 도서 검색 및 등록 기능도 제공합니다. 
+                          이를 통해 도서관 관리자와 사용자가 모두 손쉽게 필요한 정보를 확인하고 도서를 관리할 수 있는 환경을 제공합니다.</p>
                     </figcaption>
                 </figure>
               </div>
@@ -447,7 +449,10 @@
                     <img class="w-100" src="images/roadrush.png" alt="프로젝트 이미지" />
                     <figcaption>
                         <h4>로드 러쉬 게임</h4>
-                        <p>속도와 반응을 요구하는 스릴 넘치는 레이싱 게임</p>
+                        <p>Unity와 Kinect를 연동하여 3D 맵으로 구현한 게임입니다. 
+                          플레이어가 손을 올리는 동작을 통해 캐릭터가 점프하는 인터랙션을 제공하며, 
+                          Kinect의 동작 인식 기능을 활용하여 사용자의 움직임을 게임에 실시간으로 반영합니다. 
+                          3D 맵을 기반으로 한 환경 속에서 사용자에게 몰입감 있는 경험을 제공하며, 신체 제어를 통해 직관적인 플레이를 가능하게 했습니다.</p>
                     </figcaption>
                 </figure>
               </div>
@@ -456,18 +461,22 @@
                 <figure>
                     <img class="w-100" src="images/java.png" alt="프로젝트 이미지" />
                     <figcaption>
-                        <h4>자바 어플리케이션</h4>
-                        <p>효율적인 데이터 처리 시스템</p>
+                        <h4>재고관리 윈도우 응용프로그램</h4>
+                        <p>NetBeans를 활용하여 개발한 재고 관리 Windows 응용 프로그램입니다. 
+                          이 프로그램은 물품의 입출고 현황과 재고 수준을 효과적으로 관리할 수 있도록 설계되었습니다. 
+                          사용자 친화적인 인터페이스를 통해 빠르고 쉽게 재고 정보를 확인하고 업데이트할 수 있으며, 재고 부족이나 과잉을 사전에 파악할 수 있는 기능도 포함되어 있습니다. 
+                          이를 통해 효율적인 재고 관리와 데이터 관리의 자동화를 목표로 했습니다.</p>
                     </figcaption>
                 </figure>
               </div>
             <!-- 프로젝트 4 -->
              <div class="col-md-6 portfolio-item hover-effect">
                 <figure>
-                    <img class="w-100" src="images/" alt="프로젝트 이미지" />
+                    <img class="w-100" src="images/android.png" alt="프로젝트 이미지 4" />
                     <figcaption>
-                        <h4>또 다른 프로젝트</h4>
-                        <p>최신 기술을 적용한 창의적인 솔루션</p>
+                        <h4>주민 공지 앱 </h4>
+                        <p>Android 앱을 통해 아파트 거주자가 본인 아파트의 공지사항을 빠르게 확인할 수 있도록 설계되었습니다. 사용자는 앱에서 최신 공지사항을 실시간으로 확인할 수 있으며, 관리자는 공지사항을 등록, 수정, 삭제할 수 있는 관리 기능을 활용할 수 있습니다. 
+                          이를 통해 입주민과 관리자 간의 소통을 원활하게 하여, 정보 전달의 효율성을 높이고자 했습니다.</p>
                     </figcaption>
                 </figure>
               </div>
