--- a/index.html
+++ b/index.html
@@ -434,7 +434,11 @@
             <!-- 프로젝트 1 -->
               <div class="col-md-6 portfolio-item hover-effect">
                 <figure>
-                    <img class="w-100" src="images/librarymange.png" alt="프로젝트 이미지" />
+                    <img class="avatar img-fluid mt-2" 
+                      src="images/librarymange.png" 
+                      width="400"
+                      height="400"
+                      alt="프로젝트 이미지" />
                     <figcaption>
                         <h4>도서 관리 시스템</h4>
                         <p>이 프로젝트는 JSP를 활용한 도서 관리 시스템으로, 사용자들이 책 정보를 쉽게 확인하고 관리할 수 있도록 도와주는 웹 서비스입니다.
