--- a/index.html
+++ b/index.html
@@ -432,12 +432,13 @@
             </div>
             <div class="row g-3"> <!-- 두 개씩 배치하기 위해 row-cols-2 사용 -->
             <!-- 프로젝트 1 -->
-              <div class="col-md-6 portfolio-item hover-effect">
+              <div class="col-md-6 portfolio-item hover-effect"
+                data-aos="fade-up"
+                data-aos-delay="100">
                 <figure>
                     <img class="avatar img-fluid mt-2" 
                       src="images/librarymange.png" 
-                      width="400"
-                      height="400"
+                      
                       alt="프로젝트 이미지" />
                     <figcaption>
                         <h4>도서 관리 시스템</h4>
@@ -448,7 +449,9 @@
                 </figure>
               </div>
             <!-- 프로젝트 2 -->
-              <div class="col-md-6 portfolio-item hover-effect">
+              <div class="col-md-6 portfolio-item hover-effect"
+                data-aos="fade-up"
+                data-aos-delay="200">
                 <figure>
                     <img class="w-100" src="images/roadrush.png" alt="프로젝트 이미지" />
                     <figcaption>
@@ -461,7 +464,9 @@
                 </figure>
               </div>
             <!-- 프로젝트 3 -->
-              <div class="col-md-6 portfolio-item hover-effect">
+              <div class="col-md-6 portfolio-item hover-effect"
+                data-aos="fade-up"
+                data-aos-delay="300">
                 <figure>
                     <img class="w-100" src="images/java.png" alt="프로젝트 이미지" />
                     <figcaption>
@@ -474,7 +479,9 @@
                 </figure>
               </div>
             <!-- 프로젝트 4 -->
-             <div class="col-md-6 portfolio-item hover-effect">
+             <div class="col-md-6 portfolio-item hover-effect"
+                data-aos="fade-up"
+                data-aos-delay="400">
                 <figure>
                     <img class="w-100" src="images/android.png" alt="프로젝트 이미지 4" />
                     <figcaption>
