--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                 data-aos="fade-up"
                 data-aos-delay="400">
                 <figure>
-                    <img class="w-100" src="images/android.png" alt="프로젝트 이미지 4" />
+                    <img class="w-100" src="images/android.png" alt="프로젝트 이미지 " />
                     <figcaption>
                         <h4>주민 공지 앱 </h4>
                         <p>Android 앱을 통해 아파트 거주자가 본인 아파트의 공지사항을 빠르게 확인할 수 있도록 설계되었습니다. 사용자는 앱에서 최신 공지사항을 실시간으로 확인할 수 있으며, 관리자는 공지사항을 등록, 수정, 삭제할 수 있는 관리 기능을 활용할 수 있습니다. 
