--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                 data-aos="fade-up"
                 data-aos-delay="100">
                 <figure>
-                    <img class="avatar img-fluid mt-2" 
+                    <img class="w-100" 
                       src="images/librarymange.png" 
                       
                       alt="프로젝트 이미지" />
