--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
         <div class="section px-2 px-lg-4 pt-5" id="portfolio">
           <div class="container">
             <div class="text-center mb-5">
-              <h2 class="marker marker-center">프로젝트</h2>
+              <h2 class="marker marker-center">프로젝트</h2>  <br><br>
               <p class="mx-auto mb-3" style="max-width: 600px">
             </div>
             <div class="row g-3"> <!-- 두 개씩 배치하기 위해 row-cols-2 사용 -->
