--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
               <div class="mx-auto mb-3" style="max-width: 600px; text-align: left;">
                 <h3>
                   <i class="fas fa-circle fa-xs" ></i>
-                  컴퓨터정보과(21학번)
+                  컴퓨터정보공학과(21학번)
                 </h3>
                 <p style="border-bottom: 1px dotted #ccc;"></p>
                 <p>Inha Technical College. <br>
