--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       >
         <div class="container">
           <a class="link-dark navbar-brand site-title mb-0" href="#"
-            >포트폴리오</a
+            >강소이의 PORTFOLIO</a
           >
           <button
             class="navbar-toggler"
