--- a/index.html
+++ b/index.html
@@ -235,18 +235,13 @@
             </div>
             <div class="text-center">
               <p class="mx-auto mb-3" style="max-width: 600px">
-                <p>Java의
-                  Spring, Springboot를 사용하여 프로젝트를 개발했던 경험이 있습니다.
-                  Jpa 사용 경험과 SpringSecurity으로 회원 처리 개발했던 경험있습니다.
-                  Oauth2.0으로 소셜 회원가입 + DB 관리 개발했던 경험이 있습니다.</p>
-
-                  <p>MySql
-                  (관계형) 데이터베이스의 사용법을 알고 있습니다.
-                  데이터 추출을 위한 MySQl사용법을 알고 있습니다.</p>
-
-                  JavaScript
-                  (Thymeleaf)의 사용법을 알고 있습니다.
-                  (ES6)에 대해서 공부하고 사용법을 알고 있습니다.</p>
+                <p>
+                  MySQL을 사용하여 관계형 데이터베이스 설계 및 관리 경험이 있습니다.
+                  SQL 쿼리를 활용하여 데이터를 추출하고 최적화하는 방법을 익혔습니다. 
+                  또한, 프로젝트에서 발생하는 데이터 흐름을 효과적으로 처리하기 위해 MySQL을 사용한 경험이 있습니다.</p>
+                  
+                  <p>JavaScript (ES6)**를 활용하여 동적인 웹 페이지 구현을 경험했으며,
+                  JavaScript를 통해 사용자 인터페이스(UI)와 상호작용하는 기능을 구현했습니다.</p>
                   
               </p>
             </div>
